Added PBR shaders from https://gitlab.com/adv-software/vance-src

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,5 @@ sp/src/devtools/gcc9+support.o
 /sp/src/materialsystem/stdshaders/makefile.stdshader_dx9_30.copy
 /sp/src/materialsystem/stdshaders/uniquefilestocopy.txt
 /sp/src/materialsystem/stdshaders/vcslist.txt
+/sp/src/materialsystem/stdshaders/filelist.txt
+/sp/src/materialsystem/stdshaders/filelistgen.txt
