Added async-loaded scene cache

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ sp/src/devtools/gcc9+support.o
 /sp/src/materialsystem/stdshaders/vcslist.txt
 /sp/src/materialsystem/stdshaders/filelist.txt
 /sp/src/materialsystem/stdshaders/filelistgen.txt
+/sp/src/game/scenecache/Release_dll
+/sp/src/game/scenecache/Debug_dll
