--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ sp/src/devtools/gcc9+support.o
 /sp/src/materialsystem/stdshaders/filelistgen.txt
 /sp/src/game/scenecache/Release_dll
 /sp/src/game/scenecache/Debug_dll
+/sp/src/game/gamepadui/*/*.dll
+/sp/src/game/gamepadui/*/*.pdb
