--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30
@@ -1,45 +1,45 @@
 default:  fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs
 
-fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs: VertexlitPBR_ps30.fxc common_flashlight_fxc.h common_ps_fxc.h common_fxc.h common_pragmas.h deferred_shadows.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_pbr.h common_hlsl_cpp_consts.h
+fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs: VertexlitPBR_ps30.fxc common_pragmas.h common_fxc.h common_flashlight_fxc.h common_vertexlitgeneric_dx9.h shader_constant_register_map.h common_pbr.h deferred_shadows.h common_hlsl_cpp_consts.h common_ps_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." VertexlitPBR_ps30.fxc-----VertexlitPBR_ps30
 	echo VertexlitPBR_ps30.fxc>> filestocopy.txt
-	echo common_flashlight_fxc.h>> filestocopy.txt
-	echo common_ps_fxc.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
-	echo deferred_shadows.h>> filestocopy.txt
-	echo shader_constant_register_map.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_flashlight_fxc.h>> filestocopy.txt
 	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
+	echo shader_constant_register_map.h>> filestocopy.txt
 	echo common_pbr.h>> filestocopy.txt
+	echo deferred_shadows.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_ps_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs: vertexlitPBR_vs30.fxc common_fxc.h common_hlsl_cpp_consts.h common_vs_fxc.h common_pragmas.h
+fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs: vertexlitPBR_vs30.fxc common_pragmas.h common_hlsl_cpp_consts.h common_fxc.h common_vs_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." vertexlitPBR_vs30.fxc-----vertexlitPBR_vs30
 	echo vertexlitPBR_vs30.fxc>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-	echo common_vs_fxc.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_vs_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs: lightmappedPBR_ps30.fxc common_flashlight_fxc.h common_ps_fxc.h common_lightmappedgeneric_fxc.h common_fxc.h common_pragmas.h deferred_shadows.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_pbr.h common_hlsl_cpp_consts.h
+fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs: lightmappedPBR_ps30.fxc common_flashlight_fxc.h common_fxc.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_pbr.h deferred_shadows.h common_hlsl_cpp_consts.h common_ps_fxc.h common_pragmas.h common_lightmappedgeneric_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." lightmappedPBR_ps30.fxc-----lightmappedPBR_ps30
 	echo lightmappedPBR_ps30.fxc>> filestocopy.txt
 	echo common_flashlight_fxc.h>> filestocopy.txt
-	echo common_ps_fxc.h>> filestocopy.txt
-	echo common_lightmappedgeneric_fxc.h>> filestocopy.txt
 	echo common_fxc.h>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
-	echo deferred_shadows.h>> filestocopy.txt
 	echo shader_constant_register_map.h>> filestocopy.txt
 	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
 	echo common_pbr.h>> filestocopy.txt
+	echo deferred_shadows.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_ps_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
+	echo common_lightmappedgeneric_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs: lightmappedPBR_vs30.fxc common_pragmas.h common_fxc.h common_hlsl_cpp_consts.h common_vs_fxc.h
+fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs: lightmappedPBR_vs30.fxc common_pragmas.h common_hlsl_cpp_consts.h common_fxc.h common_vs_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." lightmappedPBR_vs30.fxc-----lightmappedPBR_vs30
 	echo lightmappedPBR_vs30.fxc>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
 	echo common_vs_fxc.h>> filestocopy.txt
 
