--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b
@@ -1,39 +1,59 @@
-default:  fxctmp9_tmp\gstring_light_volumetrics_ps20b.inc shaders\fxc\gstring_light_volumetrics_ps20b.vcs fxctmp9_tmp\gstring_light_volumetrics_vs20.inc shaders\fxc\gstring_light_volumetrics_vs20.vcs fxctmp9_tmp\flowmapped_water_ps20b.inc shaders\fxc\flowmapped_water_ps20b.vcs fxctmp9_tmp\flowmapped_water_vs20.inc shaders\fxc\flowmapped_water_vs20.vcs
+default:  fxctmp9_tmp\gstring_light_volumetrics_ps20b.inc shaders\fxc\gstring_light_volumetrics_ps20b.vcs fxctmp9_tmp\gstring_light_volumetrics_vs20.inc shaders\fxc\gstring_light_volumetrics_vs20.vcs fxctmp9_tmp\flowmapped_water_ps20b.inc shaders\fxc\flowmapped_water_ps20b.vcs fxctmp9_tmp\flowmapped_water_vs20.inc shaders\fxc\flowmapped_water_vs20.vcs fxctmp9_tmp\solidenergy_ps20b.inc shaders\fxc\solidenergy_ps20b.vcs fxctmp9_tmp\solidenergy_vs20.inc shaders\fxc\solidenergy_vs20.vcs
 
-fxctmp9_tmp\gstring_light_volumetrics_ps20b.inc shaders\fxc\gstring_light_volumetrics_ps20b.vcs: gstring_light_volumetrics_ps20b.fxc common_fxc.h common_flashlight_fxc.h common_pragmas.h common_hlsl_cpp_consts.h common_ps_fxc.h
+fxctmp9_tmp\gstring_light_volumetrics_ps20b.inc shaders\fxc\gstring_light_volumetrics_ps20b.vcs: gstring_light_volumetrics_ps20b.fxc common_fxc.h common_flashlight_fxc.h common_ps_fxc.h common_hlsl_cpp_consts.h common_pragmas.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." gstring_light_volumetrics_ps20b.fxc-----gstring_light_volumetrics_ps20b
 	echo gstring_light_volumetrics_ps20b.fxc>> filestocopy.txt
 	echo common_fxc.h>> filestocopy.txt
 	echo common_flashlight_fxc.h>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
 	echo common_ps_fxc.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
 
-fxctmp9_tmp\gstring_light_volumetrics_vs20.inc shaders\fxc\gstring_light_volumetrics_vs20.vcs: gstring_light_volumetrics_vs20.fxc common_pragmas.h common_hlsl_cpp_consts.h common_vs_fxc.h common_fxc.h
+fxctmp9_tmp\gstring_light_volumetrics_vs20.inc shaders\fxc\gstring_light_volumetrics_vs20.vcs: gstring_light_volumetrics_vs20.fxc common_fxc.h common_hlsl_cpp_consts.h common_vs_fxc.h common_pragmas.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." gstring_light_volumetrics_vs20.fxc-----gstring_light_volumetrics_vs20
 	echo gstring_light_volumetrics_vs20.fxc>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
 	echo common_vs_fxc.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
 
-fxctmp9_tmp\flowmapped_water_ps20b.inc shaders\fxc\flowmapped_water_ps20b.vcs: flowmapped_water_ps20b.fxc common_flashlight_fxc.h common_fxc.h common_fog_ps_fxc.h common_hlsl_cpp_consts.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_ps_fxc.h common_pragmas.h
+fxctmp9_tmp\flowmapped_water_ps20b.inc shaders\fxc\flowmapped_water_ps20b.vcs: flowmapped_water_ps20b.fxc common_flashlight_fxc.h common_hlsl_cpp_consts.h common_ps_fxc.h common_fxc.h common_vertexlitgeneric_dx9.h shader_constant_register_map.h common_fog_ps_fxc.h common_pragmas.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." flowmapped_water_ps20b.fxc-----flowmapped_water_ps20b
 	echo flowmapped_water_ps20b.fxc>> filestocopy.txt
 	echo common_flashlight_fxc.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
-	echo common_fog_ps_fxc.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-	echo shader_constant_register_map.h>> filestocopy.txt
-	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
 	echo common_ps_fxc.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
+	echo shader_constant_register_map.h>> filestocopy.txt
+	echo common_fog_ps_fxc.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
 
-fxctmp9_tmp\flowmapped_water_vs20.inc shaders\fxc\flowmapped_water_vs20.vcs: flowmapped_water_vs20.fxc common_fxc.h common_vs_fxc.h common_hlsl_cpp_consts.h common_pragmas.h
+fxctmp9_tmp\flowmapped_water_vs20.inc shaders\fxc\flowmapped_water_vs20.vcs: flowmapped_water_vs20.fxc common_vs_fxc.h common_pragmas.h common_fxc.h common_hlsl_cpp_consts.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." flowmapped_water_vs20.fxc-----flowmapped_water_vs20
 	echo flowmapped_water_vs20.fxc>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
 	echo common_vs_fxc.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+
+fxctmp9_tmp\solidenergy_ps20b.inc shaders\fxc\solidenergy_ps20b.vcs: solidenergy_ps20b.fxc common_fxc.h common_fog_ps_fxc.h common_pragmas.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_hlsl_cpp_consts.h common_ps_fxc.h
+	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." solidenergy_ps20b.fxc-----solidenergy_ps20b
+	echo solidenergy_ps20b.fxc>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_fog_ps_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
+	echo shader_constant_register_map.h>> filestocopy.txt
+	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_ps_fxc.h>> filestocopy.txt
+
+fxctmp9_tmp\solidenergy_vs20.inc shaders\fxc\solidenergy_vs20.vcs: solidenergy_vs20.fxc common_hlsl_cpp_consts.h common_fxc.h common_pragmas.h common_vs_fxc.h common_fog_vs_fxc.h
+	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." solidenergy_vs20.fxc-----solidenergy_vs20
+	echo solidenergy_vs20.fxc>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
+	echo common_vs_fxc.h>> filestocopy.txt
+	echo common_fog_vs_fxc.h>> filestocopy.txt
 
