--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30.copy
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30.copy
@@ -2,3 +2,5 @@ VertexlitPBR_ps30.fxc-----VertexlitPBR_ps30
 vertexlitPBR_vs30.fxc-----vertexlitPBR_vs30
 lightmappedPBR_ps30.fxc-----lightmappedPBR_ps30
 lightmappedPBR_vs30.fxc-----lightmappedPBR_vs30
+solidenergy_ps20b.fxc-----solidenergy_ps30
+solidenergy_vs20.fxc-----solidenergy_vs30
