--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
@@ -4,3 +4,6 @@ flowmapped_water_ps20b.fxc-----flowmapped_water_ps20b
 flowmapped_water_vs20.fxc-----flowmapped_water_vs20
 solidenergy_ps20b.fxc-----solidenergy_ps20b
 solidenergy_vs20.fxc-----solidenergy_vs20
+SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps20
+SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps20b
+SDK_eye_refract_vs20.fxc-----SDK_eye_refract_vs20
