--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30.copy
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30.copy
@@ -4,3 +4,5 @@ lightmappedPBR_ps30.fxc-----lightmappedPBR_ps30
 lightmappedPBR_vs30.fxc-----lightmappedPBR_vs30
 solidenergy_ps20b.fxc-----solidenergy_ps30
 solidenergy_vs20.fxc-----solidenergy_vs30
+SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps30
+SDK_eye_refract_vs20.fxc-----SDK_eye_refract_vs30
