--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_30
@@ -1,58 +1,58 @@
 default:  fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs fxctmp9_tmp\solidenergy_ps30.inc shaders\fxc\solidenergy_ps30.vcs fxctmp9_tmp\solidenergy_vs30.inc shaders\fxc\solidenergy_vs30.vcs fxctmp9_tmp\SDK_eye_refract_ps30.inc shaders\fxc\SDK_eye_refract_ps30.vcs fxctmp9_tmp\SDK_eye_refract_vs30.inc shaders\fxc\SDK_eye_refract_vs30.vcs
 
-fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs: VertexlitPBR_ps30.fxc common_fxc.h deferred_shadows.h common_pragmas.h common_pbr.h common_hlsl_cpp_consts.h common_flashlight_fxc.h common_ps_fxc.h common_vertexlitgeneric_dx9.h shader_constant_register_map.h
+fxctmp9_tmp\VertexlitPBR_ps30.inc shaders\fxc\VertexlitPBR_ps30.vcs: VertexlitPBR_ps30.fxc common_ps_fxc.h common_hlsl_cpp_consts.h deferred_shadows.h shader_constant_register_map.h common_fxc.h common_vertexlitgeneric_dx9.h common_flashlight_fxc.h common_pbr.h common_pragmas.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." VertexlitPBR_ps30.fxc-----VertexlitPBR_ps30
 	echo VertexlitPBR_ps30.fxc>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
-	echo deferred_shadows.h>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
-	echo common_pbr.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-	echo common_flashlight_fxc.h>> filestocopy.txt
 	echo common_ps_fxc.h>> filestocopy.txt
-	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo deferred_shadows.h>> filestocopy.txt
 	echo shader_constant_register_map.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
+	echo common_flashlight_fxc.h>> filestocopy.txt
+	echo common_pbr.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
 
-fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs: vertexlitPBR_vs30.fxc common_vs_fxc.h common_pragmas.h common_fxc.h common_hlsl_cpp_consts.h
+fxctmp9_tmp\vertexlitPBR_vs30.inc shaders\fxc\vertexlitPBR_vs30.vcs: vertexlitPBR_vs30.fxc common_fxc.h common_pragmas.h common_hlsl_cpp_consts.h common_vs_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." vertexlitPBR_vs30.fxc-----vertexlitPBR_vs30
 	echo vertexlitPBR_vs30.fxc>> filestocopy.txt
-	echo common_vs_fxc.h>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
 	echo common_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_vs_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs: lightmappedPBR_ps30.fxc common_pragmas.h common_fxc.h common_lightmappedgeneric_fxc.h deferred_shadows.h shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_ps_fxc.h common_hlsl_cpp_consts.h common_flashlight_fxc.h common_pbr.h
+fxctmp9_tmp\lightmappedPBR_ps30.inc shaders\fxc\lightmappedPBR_ps30.vcs: lightmappedPBR_ps30.fxc shader_constant_register_map.h common_lightmappedgeneric_fxc.h deferred_shadows.h common_hlsl_cpp_consts.h common_fxc.h common_ps_fxc.h common_flashlight_fxc.h common_pbr.h common_pragmas.h common_vertexlitgeneric_dx9.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." lightmappedPBR_ps30.fxc-----lightmappedPBR_ps30
 	echo lightmappedPBR_ps30.fxc>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
+	echo shader_constant_register_map.h>> filestocopy.txt
 	echo common_lightmappedgeneric_fxc.h>> filestocopy.txt
 	echo deferred_shadows.h>> filestocopy.txt
-	echo shader_constant_register_map.h>> filestocopy.txt
-	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
-	echo common_ps_fxc.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_ps_fxc.h>> filestocopy.txt
 	echo common_flashlight_fxc.h>> filestocopy.txt
 	echo common_pbr.h>> filestocopy.txt
-
-fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs: lightmappedPBR_vs30.fxc common_pragmas.h common_vs_fxc.h common_fxc.h common_hlsl_cpp_consts.h
-	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." lightmappedPBR_vs30.fxc-----lightmappedPBR_vs30
-	echo lightmappedPBR_vs30.fxc>> filestocopy.txt
-	echo common_pragmas.h>> filestocopy.txt
-	echo common_vs_fxc.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-
-fxctmp9_tmp\solidenergy_ps30.inc shaders\fxc\solidenergy_ps30.vcs: solidenergy_ps20b.fxc common_fog_ps_fxc.h common_hlsl_cpp_consts.h common_fxc.h common_pragmas.h common_vertexlitgeneric_dx9.h common_ps_fxc.h shader_constant_register_map.h
-	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." solidenergy_ps20b.fxc-----solidenergy_ps30
-	echo solidenergy_ps20b.fxc>> filestocopy.txt
-	echo common_fog_ps_fxc.h>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
 	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
-	echo common_ps_fxc.h>> filestocopy.txt
+
+fxctmp9_tmp\lightmappedPBR_vs30.inc shaders\fxc\lightmappedPBR_vs30.vcs: lightmappedPBR_vs30.fxc common_vs_fxc.h common_fxc.h common_pragmas.h common_hlsl_cpp_consts.h
+	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." lightmappedPBR_vs30.fxc-----lightmappedPBR_vs30
+	echo lightmappedPBR_vs30.fxc>> filestocopy.txt
+	echo common_vs_fxc.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+
+fxctmp9_tmp\solidenergy_ps30.inc shaders\fxc\solidenergy_ps30.vcs: solidenergy_ps20b.fxc common_hlsl_cpp_consts.h shader_constant_register_map.h common_fxc.h common_ps_fxc.h common_fog_ps_fxc.h common_pragmas.h common_vertexlitgeneric_dx9.h
+	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." solidenergy_ps20b.fxc-----solidenergy_ps30
+	echo solidenergy_ps20b.fxc>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
 	echo shader_constant_register_map.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_ps_fxc.h>> filestocopy.txt
+	echo common_fog_ps_fxc.h>> filestocopy.txt
+	echo common_pragmas.h>> filestocopy.txt
+	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
 
 fxctmp9_tmp\solidenergy_vs30.inc shaders\fxc\solidenergy_vs30.vcs: solidenergy_vs20.fxc common_hlsl_cpp_consts.h common_fxc.h common_pragmas.h common_fog_vs_fxc.h common_vs_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." solidenergy_vs20.fxc-----solidenergy_vs30
@@ -63,23 +63,23 @@ fxctmp9_tmp\solidenergy_vs30.inc shaders\fxc\solidenergy_vs30.vcs: solidenergy_v
 	echo common_fog_vs_fxc.h>> filestocopy.txt
 	echo common_vs_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\SDK_eye_refract_ps30.inc shaders\fxc\SDK_eye_refract_ps30.vcs: SDK_eye_refract_ps2x.fxc shader_constant_register_map.h common_vertexlitgeneric_dx9.h common_ps_fxc.h common_flashlight_fxc.h common_hlsl_cpp_consts.h common_pragmas.h common_fxc.h
+fxctmp9_tmp\SDK_eye_refract_ps30.inc shaders\fxc\SDK_eye_refract_ps30.vcs: SDK_eye_refract_ps2x.fxc common_ps_fxc.h common_vertexlitgeneric_dx9.h common_hlsl_cpp_consts.h common_flashlight_fxc.h shader_constant_register_map.h common_pragmas.h common_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps30
 	echo SDK_eye_refract_ps2x.fxc>> filestocopy.txt
-	echo shader_constant_register_map.h>> filestocopy.txt
-	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
 	echo common_ps_fxc.h>> filestocopy.txt
-	echo common_flashlight_fxc.h>> filestocopy.txt
+	echo common_vertexlitgeneric_dx9.h>> filestocopy.txt
 	echo common_hlsl_cpp_consts.h>> filestocopy.txt
+	echo common_flashlight_fxc.h>> filestocopy.txt
+	echo shader_constant_register_map.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
 	echo common_fxc.h>> filestocopy.txt
 
-fxctmp9_tmp\SDK_eye_refract_vs30.inc shaders\fxc\SDK_eye_refract_vs30.vcs: SDK_eye_refract_vs20.fxc common_hlsl_cpp_consts.h common_fxc.h common_pragmas.h common_vs_fxc.h vortwarp_vs20_helper.h
+fxctmp9_tmp\SDK_eye_refract_vs30.inc shaders\fxc\SDK_eye_refract_vs30.vcs: SDK_eye_refract_vs20.fxc common_pragmas.h common_fxc.h common_hlsl_cpp_consts.h vortwarp_vs20_helper.h common_vs_fxc.h
 	perl ..\..\devtools\bin\fxc_prep.pl   -source "..\.." SDK_eye_refract_vs20.fxc-----SDK_eye_refract_vs30
 	echo SDK_eye_refract_vs20.fxc>> filestocopy.txt
-	echo common_hlsl_cpp_consts.h>> filestocopy.txt
-	echo common_fxc.h>> filestocopy.txt
 	echo common_pragmas.h>> filestocopy.txt
-	echo common_vs_fxc.h>> filestocopy.txt
+	echo common_fxc.h>> filestocopy.txt
+	echo common_hlsl_cpp_consts.h>> filestocopy.txt
 	echo vortwarp_vs20_helper.h>> filestocopy.txt
+	echo common_vs_fxc.h>> filestocopy.txt
 
