--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
@@ -7,3 +7,6 @@ solidenergy_vs20.fxc-----solidenergy_vs20
 SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps20
 SDK_eye_refract_ps2x.fxc-----SDK_eye_refract_ps20b
 SDK_eye_refract_vs20.fxc-----SDK_eye_refract_vs20
+object_motion_blur_vs20.fxc-----object_motion_blur_vs20
+object_motion_blur_ps2x.fxc-----object_motion_blur_ps20
+object_motion_blur_ps2x.fxc-----object_motion_blur_ps20b
