--- a/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
+++ b/sp/src/materialsystem/stdshaders/makefile.mapbase_dx9_20b.copy
@@ -10,3 +10,5 @@ SDK_eye_refract_vs20.fxc-----SDK_eye_refract_vs20
 object_motion_blur_vs20.fxc-----object_motion_blur_vs20
 object_motion_blur_ps2x.fxc-----object_motion_blur_ps20
 object_motion_blur_ps2x.fxc-----object_motion_blur_ps20b
+anaglyph_combine_ps2x.fxc-----anaglyph_combine_ps20
+anaglyph_combine_ps2x.fxc-----anaglyph_combine_ps20b
